fix css on firefox

--- a/scratch.css
+++ b/scratch.css
@@ -56,6 +56,7 @@ html {
 body {
 	font-family: 'PT Sans', sans-serif;
 	font-size: 12px;
+	line-height: 1.5;
 	/* background-color: #eee8d5; */
 	background-color: #fdf6e3;
 }
@@ -392,6 +393,7 @@ footer { flex-grow: 0; }
  */
 div.row {
 	display: flex;
+	min-height: 0; /* firefox wants this */
 }
 div.col {
 	flex: 1;
